# dtcg-jupyter-dashboard

./: Dockerfile  README.md  controller.py  dashboard.ipynb  main.py  plotting.py  profilers.py  pyproject.toml  wrangler.py
src/dtcg_jupyter_board/: controller.py  dashboard.ipynb  plotting.py  wrangler.py
src/dtcg_jupyter_board/static/data/l2_precompute/RGI60-11/: glacier_outlines.shp
static/data/l2_precompute/RGI60-06/: glacier_outlines.shp
