[build-system]
requires = ["uv_build >= 0.9.28, <0.11.0"]
build-backend = "uv_build"

[project]
name = "dtcg-jupyter-board"
version = "0.1.0"
description = "Jupyter-based frontend for DTCG"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "bokeh>=3.8.2",
    "bokeh-fastapi>=0.1.5",
    "dask>=2026.1.2",
    "dtcg>=1.1.2",
    "fsspec>=2026.2.0",
    "geopandas>=1.1.2",
    "holoviews>=1.22.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyter-bokeh>=4.0.5",
    "lab>=8.8",
    "panel[fastapi]>=1.8.7",
    "param>=2.3.2",
    "zarr>=3.1.5",
]

[project.optional-dependencies]
build = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
dev = [
    "dtcg[build,docs,tests,oggm]",
    "black[jupyter]>=26.1.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
]
oggm = [
    "bottleneck>=1.6.0",
    "cartopy>=0.25.0",
    "configobj>=5.0.9",
    "dask>=2026.1.2",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "motionless>=1.3.3",
    "netcdf4>=1.7.4",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pillow>=12.1.1",
    "progressbar2>=4.5.0",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "rioxarray>=0.21.0",
    "salem>=0.3.11",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "tables>=3.10.2",
    "xarray>=2025.11.0",
]
tests = [
    "pytest",
    "pytest-mpl"
]

[tool.uv.sources]
dtcg = { git = "https://github.com/dtc-glaciers/dtcg" }
oggm = { git = "https://github.com/gampnico/oggm@feat-dtcg" }
pytest-mpl = { git = "https://github.com/OGGM/pytest-mpl" }
